# Tablero-Kaban

./: .gitignore  BITACORA.md  MANUAL_EJECUCION.md  README.md  pyproject.toml  tablero.json
context/: ARCHITECTURE.md  CONTEXT.md  DOMAIN.md  TECH_CONSTRAINTS.md
plan/: PLAN_ATOMICO.md
prompts/: plantilla_ejecucion_paso.md
specs/: FEATURE_SPEC_001_crear_tarea.md  FEATURE_SPEC_002_mover_tarea.md  FEATURE_SPEC_003_obtener_tablero.md
src/aplicacion/: crear_tarea.py  mover_tarea.py  obtener_tablero.py  repositorio_tablero.py
src/dominio/: errores.py  estado_tarea.py  tablero.py  tarea.py
src/infraestructura/frontend/: app.js  index.html  style.css
src/infraestructura/http/: api.py
src/infraestructura/persistencia/: repositorio_json.py
tests/: conftest.py  test_crear_tarea.py  test_mover_tarea.py  test_obtener_tablero.py
