[tool.poetry]
name = "tablero-kanban"
version = "0.1.0"
description = "Tablero Kanban Personal implementado con Arquitectura Hexagonal"
authors = ["Estudiante <estudiante@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
